--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" type="text/css" href="css/cs-select.css" />
 		<link rel="stylesheet" type="text/css" href="css/cs-skin-boxes.css" />
 		<script src="js/modernizr.custom.js"></script>
+		<script src="https://use.fontawesome.com/c73ce14564.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -25,46 +26,55 @@
 					<div class="codrops-top">
 						<a class="codrops-icon codrops-icon-prev" href="http://www.worklabs.com"><span>Back to WORK Labs</span></a>
 						<a class="codrops-icon codrops-icon-drop" href="/pdf/creative-brief.pdf" download><span>Download PDF</span></a>
-						<a class="codrops-icon codrops-icon-info" href="#"><span>State the objectives for the project as simply as possible. Decide what’s really important. Remember, good advertising is almost always based on a simple, clear message that evokes a strong emotion from a well defined audience. This creative brief is not to serve as a substitute for discussion between agency and client, nor is it a replacement for background materials to the job order.</span></a>
+						<a class="codrops-icon codrops-icon-info" href="#"><span>State the objectives for the project as simply as possible. Decide what’s really important. Remember, good advertising is almost always based on a simple, clear message that evokes a strong emotion from a well defined audience.</span></a>
 					</div>
 				</div>
 				<form id="myform" class="fs-form fs-form-full" autocomplete="off">
 					<ol class="fs-fields">
+
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q1" data-info="This is subject to change...">Project Title</label>
-							<input class="fs-anim-lower" id="q1" name="q1" type="text" placeholder="Company - Initiative" required/>
+							<label class="fs-field-label fs-anim-upper" for="q1" data-info="Use your name if you're not sure yet...">Company Name</label>
+							<input class="fs-anim-lower" id="q1" name="q1" type="text" placeholder="Your Brand" required/>
 						</li>
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q2" data-info="The Audience...">Who are we talking to?</label>
-							<input class="fs-anim-lower" id="q2" name="q2" type="text" placeholder="Millennials with jobs" required/>
+							<label class="fs-field-label fs-anim-upper" for="q2" data-info="This is subject to change...">Project Title</label>
+							<input class="fs-anim-lower" id="q2" name="q2" type="text" placeholder="Rebranding" required/>
+						</li>
+						<li>
+							<label class="fs-field-label fs-anim-upper" for="q3" data-info="The Target...">Who are we talking to?</label>
+							<input class="fs-anim-lower" id="q3" name="q3" type="text" placeholder="Millennials with jobs" required/>
 						</li>
 						<!--<li>
 							<label class="fs-field-label fs-anim-upper" for="q2" data-info="We won't send you spam, we promise...">What's your email address?</label>
 							<input class="fs-anim-lower" id="q2" name="q2" type="email" placeholder="dean@road.us" required/>
 						</li>-->
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q3" data-info="The Position...">What is the thing we want to tell them?</label>
-							<input class="fs-anim-lower" id="q3" name="q3" type="text" placeholder="Be specific!" required/>
+							<label class="fs-field-label fs-anim-upper" for="q4" data-info="The Position...">What is the thing we want to tell them?</label>
+							<textarea class="fs-anim-lower" id="q4" name="q4" type="text" placeholder="Be specific!" required/></textarea>
 						</li>
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q4">What reasons support our position to the larger audience?</label>
-							<textarea class="fs-anim-lower" id="q4" name="q4" placeholder="Describe here" required></textarea>
-						</li>
-						<li>
-							<label class="fs-field-label fs-anim-upper" for="q5">What do we want them to do?</label>
+							<label class="fs-field-label fs-anim-upper" for="q5">What reasons support our position to the larger audience?</label>
 							<textarea class="fs-anim-lower" id="q5" name="q5" placeholder="Describe here" required></textarea>
 						</li>
+						<li>
+							<label class="fs-field-label fs-anim-upper" for="q6">What do we want them to do?</label>
+							<textarea class="fs-anim-lower" id="q6" name="q6" placeholder="Describe here" required></textarea>
+						</li>
 						<li data-input-trigger>
-							<label class="fs-field-label fs-anim-upper" for="q6" data-info="This will help us know what kind of service you need">What media is involved?</label>
-							<div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
-								<span><input id="q6b" name="q6" type="radio" value="conversion"/><label for="q6b" class="radio-conversion">Televison/Desktop</label></span>
-								<span><input id="q6c" name="q6" type="radio" value="social"/><label for="q6c" class="radio-social">Direct/Print</label></span>
-								<span><input id="q6a" name="q6" type="radio" value="mobile"/><label for="q6a" class="radio-mobile">Mobile/Social</label></span>
+							<label class="fs-field-label fs-anim-upper" for="q7" data-info="This will help us know what kind of service you need">What media is involved?</label>
+							<div class="fs-checkbox-group fs-checkbox-custom clearfix fs-anim-lower">
+								<span><input id="q7a" name="q7" type="checkbox" value="Televison"/><label for="q7a" class="checkbox-television">Televison</label></span>
+								<span><input id="q7b" name="q7" type="checkbox" value="Radio"/><label for="q7b" class="checkbox-radio">Radio</label></span>
+								<span><input id="q7c" name="q7" type="checkbox" value="Print"/><label for="q7c" class="checkbox-print">Print</label></span>
+								<span><input id="q7d" name="q7" type="checkbox" value="Digital"/><label for="q7d" class="checkbox-digital">Digital</label></span>
+								<span><input id="q7e" name="q7" type="checkbox" value="Signage"/><label for="q7e" class="checkbox-signage">Signage</label></span>
+								<span><input id="q7f" name="q7" type="checkbox" value="Other"/><label for="q7f" class="checkbox-other">Other</label></span>
+
 							</div>
 						</li>
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q7">What are the legal and logo requirements?</label>
-							<textarea class="fs-anim-lower" id="q7" name="q7" placeholder="Trademarkable? Disclaimer..." required></textarea>
+							<label class="fs-field-label fs-anim-upper" for="q8">What are the legal and logo requirements?</label>
+							<textarea class="fs-anim-lower" id="q8" name="q8" placeholder="Trademarkable? Disclaimer..." required></textarea>
 						</li>
 						<!--<li data-input-trigger>
 							<label class="fs-field-label fs-anim-upper" for="q3" data-info="This will help us know what kind of service you need">What's your priority for your new website?</label>
@@ -100,17 +110,8 @@
 								<option value="#f1c1bd" data-class="color-f1c1bd">#f1c1bd</option>
 							</select>
 						</li>-->
-
-						<li>
-							<label class="fs-field-label fs-anim-upper" for="q8">What's your budget?</label>
-							<input class="fs-mark fs-anim-lower" id="q8" name="q8" type="number" placeholder="10000" step="100" min="3000" required/>
-						</li>
-						<li>
-							<label class="fs-field-label fs-anim-upper" for="q9" data-info="We won't send you spam, we promise...">What's your email address?</label>
-							<input class="fs-anim-lower" id="q9" name="q9" type="email" placeholder="yourname@company.com" required/>
-						</li>
 					</ol><!-- /fs-fields -->
-					<button class="fs-submit" type="submit">Send answers</button>
+					<button class="fs-submit" type="submit">Send brief</button>
 				</form><!-- /fs-form -->
 			</div><!-- /fs-form-wrap -->
 
