--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<div class="codrops-top">
 						<a class="codrops-icon codrops-icon-prev" href="http://www.worklabs.com"><span>Back to WORK Labs</span></a>
 						<a class="codrops-icon codrops-icon-drop" href="/pdf/creative-brief.pdf" download><span>Download PDF</span></a>
-						<a class="codrops-icon codrops-icon-info" href="#"><span>State the objectives for the project as simply as possible. Decide what’s really important. Remember, good advertising is almost always based on a simple, clear message that evokes a strong emotion from a well defined audience.</span></a>
+						<a class="codrops-icon codrops-icon-info" href="#"><span>State the objectives for the project as simply as possible. Decide what’s really important. Remember, good advertising is almost always based on a simple, clear message that evokes a strong emotion from a well defined audience. This creative brief is not to serve as a substitute for discussion between WORK Labs and client, nor is it a replacement for background materials to the job order.</span></a>
 					</div>
 				</div>
 				<form id="myform" class="fs-form fs-form-full" autocomplete="off">
@@ -111,7 +111,7 @@
 							</select>
 						</li>-->
 					</ol><!-- /fs-fields -->
-					<button class="fs-submit" type="submit">Send brief</button>
+					<button class="fs-submit" type="submit">Send Brief</button>
 				</form><!-- /fs-form -->
 			</div><!-- /fs-form-wrap -->
 
