--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 						<a class="codrops-icon codrops-icon-info" href="#"><span>State the objectives for the project as simply as possible. Decide what’s really important. Remember, good advertising is almost always based on a simple, clear message that evokes a strong emotion from a well defined audience. This creative brief is not to serve as a substitute for discussion between WORK Labs and client, nor is it a replacement for background materials to the job order.</span></a>
 					</div>
 				</div>
-				<form id="myform" class="fs-form fs-form-full" autocomplete="off">
+				<form id="myform" class="fs-form fs-form-full" autocomplete="off" action="https://formspree.io/chris@worklabs.com"
+      method="POST">
 					<ol class="fs-fields">
 
 						<li>
@@ -61,7 +62,7 @@
 							<textarea class="fs-anim-lower" id="q6" name="q6" placeholder="Describe here" required></textarea>
 						</li>
 						<li data-input-trigger>
-							<label class="fs-field-label fs-anim-upper" for="q7" data-info="This will help us know what kind of service you need">What media is involved?</label>
+							<label class="fs-field-label fs-anim-upper" for="q7" data-info="This will help us know what kind of service you need" >What media is involved?</label>
 							<div class="fs-checkbox-group fs-checkbox-custom clearfix fs-anim-lower">
 								<span><input id="q7a" name="q7" type="checkbox" value="Televison"/><label for="q7a" class="checkbox-television">Televison</label></span>
 								<span><input id="q7b" name="q7" type="checkbox" value="Radio"/><label for="q7b" class="checkbox-radio">Radio</label></span>
@@ -111,7 +112,7 @@
 							</select>
 						</li>-->
 					</ol><!-- /fs-fields -->
-					<button class="fs-submit" type="submit">Send Brief</button>
+					<button class="fs-submit" type="submit" value="Send">Send Brief</button>
 				</form><!-- /fs-form -->
 			</div><!-- /fs-form-wrap -->
 
