--- a/index.html
+++ b/index.html
@@ -34,48 +34,48 @@
 					<ol class="fs-fields">
 
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q1" data-info="Use your name if you're not sure yet...">Company Name</label>
-							<input class="fs-anim-lower" id="q1" name="q1" type="text" placeholder="Your Brand" required/>
+							<label class="fs-field-label fs-anim-upper" for="Company Name" data-info="Use your name if you're not sure yet...">Company Name</label>
+							<input class="fs-anim-lower" id="q1" name="Company Name" type="text" placeholder="Your Brand" required/>
 						</li>
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q2" data-info="This is subject to change...">Project Title</label>
-							<input class="fs-anim-lower" id="q2" name="q2" type="text" placeholder="Rebranding" required/>
+							<label class="fs-field-label fs-anim-upper" for="Project Title" data-info="This is subject to change...">Project Title</label>
+							<input class="fs-anim-lower" id="q2" name="Project Title" type="text" placeholder="Rebranding" required/>
 						</li>
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q3" data-info="The Target...">Who are we talking to?</label>
-							<input class="fs-anim-lower" id="q3" name="q3" type="text" placeholder="Millennials with jobs" required/>
+							<label class="fs-field-label fs-anim-upper" for="The Target" data-info="The Target...">Who are we talking to?</label>
+							<input class="fs-anim-lower" id="q3" name="The Target" type="text" placeholder="Millennials with jobs" required/>
 						</li>
 						<!--<li>
 							<label class="fs-field-label fs-anim-upper" for="q2" data-info="We won't send you spam, we promise...">What's your email address?</label>
 							<input class="fs-anim-lower" id="q2" name="q2" type="email" placeholder="dean@road.us" required/>
 						</li>-->
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q4" data-info="The Position...">What is the thing we want to tell them?</label>
-							<textarea class="fs-anim-lower" id="q4" name="q4" type="text" placeholder="Be specific!" required/></textarea>
+							<label class="fs-field-label fs-anim-upper" for="The Position" data-info="The Position...">What is the thing we want to tell them?</label>
+							<textarea class="fs-anim-lower" id="q4" name="The Position" type="text" placeholder="Be specific!" required/></textarea>
 						</li>
 						<li>
 							<label class="fs-field-label fs-anim-upper" for="q5">What reasons support our position to the larger audience?</label>
 							<textarea class="fs-anim-lower" id="q5" name="q5" placeholder="Describe here" required></textarea>
 						</li>
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q6">What do we want them to do?</label>
-							<textarea class="fs-anim-lower" id="q6" name="q6" placeholder="Describe here" required></textarea>
+							<label class="fs-field-label fs-anim-upper" for="The Goal">What do we want them to do?</label>
+							<textarea class="fs-anim-lower" id="q6" name="The Goal" placeholder="Describe here" required></textarea>
 						</li>
 						<li data-input-trigger>
-							<label class="fs-field-label fs-anim-upper" for="q7" data-info="This will help us know what kind of service you need" >What media is involved?</label>
+							<label class="fs-field-label fs-anim-upper" for="The Medium" data-info="This will help us know what kind of service you need" >What media is involved?</label>
 							<div class="fs-checkbox-group fs-checkbox-custom clearfix fs-anim-lower">
-								<span><input id="q7a" name="q7" type="checkbox" value="Televison"/><label for="q7a" class="checkbox-television">Televison</label></span>
-								<span><input id="q7b" name="q7" type="checkbox" value="Radio"/><label for="q7b" class="checkbox-radio">Radio</label></span>
-								<span><input id="q7c" name="q7" type="checkbox" value="Print"/><label for="q7c" class="checkbox-print">Print</label></span>
-								<span><input id="q7d" name="q7" type="checkbox" value="Digital"/><label for="q7d" class="checkbox-digital">Digital</label></span>
-								<span><input id="q7e" name="q7" type="checkbox" value="Signage"/><label for="q7e" class="checkbox-signage">Signage</label></span>
-								<span><input id="q7f" name="q7" type="checkbox" value="Other"/><label for="q7f" class="checkbox-other">Other</label></span>
+								<span><input id="q7a" name="The Medium" type="checkbox" value="Televison"/><label for="q7a" class="checkbox-television">Televison</label></span>
+								<span><input id="q7b" name="The Medium" type="checkbox" value="Radio"/><label for="q7b" class="checkbox-radio">Radio</label></span>
+								<span><input id="q7c" name="The Medium" type="checkbox" value="Print"/><label for="q7c" class="checkbox-print">Print</label></span>
+								<span><input id="q7d" name="The Medium" type="checkbox" value="Digital"/><label for="q7d" class="checkbox-digital">Digital</label></span>
+								<span><input id="q7e" name="The Medium" type="checkbox" value="Signage"/><label for="q7e" class="checkbox-signage">Signage</label></span>
+								<span><input id="q7f" name="The Medium" type="checkbox" value="Other"/><label for="q7f" class="checkbox-other">Other</label></span>
 
 							</div>
 						</li>
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q8">What are the legal and logo requirements?</label>
-							<textarea class="fs-anim-lower" id="q8" name="q8" placeholder="Trademarkable? Disclaimer..." required></textarea>
+							<label class="fs-field-label fs-anim-upper" for="The Requirements">What are the legal and logo requirements?</label>
+							<textarea class="fs-anim-lower" id="q8" name="The Requirements" placeholder="Trademarkable? Disclaimer..." required></textarea>
 						</li>
 						<!--<li data-input-trigger>
 							<label class="fs-field-label fs-anim-upper" for="q3" data-info="This will help us know what kind of service you need">What's your priority for your new website?</label>
