--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
 							<label class="fs-field-label fs-anim-upper" for="The Requirements">What are the legal and logo requirements?</label>
 							<textarea class="fs-anim-lower" id="q8" name="The Requirements" placeholder="Trademarkable? Disclaimer..." required></textarea>
 						</li>
+
+						<li>
+							<label class="fs-field-label fs-anim-upper" for="Contact" data-info="We won't send you spam, we promise...">What's your email address?</label>
+							<input class="fs-anim-lower" id="q2" name="Contact" type="email" placeholder="you@yourcompany.com" required/>
+						</li>
 						<!--<li data-input-trigger>
 							<label class="fs-field-label fs-anim-upper" for="q3" data-info="This will help us know what kind of service you need">What's your priority for your new website?</label>
 							<div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
